# CLion_ncnn_jetson_nano

./: CMakeLists.txt  Readme.md
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  ncnn_test.cbp  ncnn_with_vulkan_clion_remote_test.cbp
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  ncnn_test.cbp  ncnn_with_vulkan_clion_remote_test.cbp
src/: main.cpp
